Closed
Bug 245377
Opened 22 years ago
Closed 22 years ago
CSS background images have broken transparency
Categories
(Core Graveyard :: Image: Painting, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: crispin, Assigned: tor)
References
()
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
1.38 KB,
patch
|
blizzard
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a2) Gecko/20040601 Galeon/1.3.15.99
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a2) Gecko/20040601 Galeon/1.3.15.99
If you have a background image set using CSS, that uses transparency, the
transparent parts are no longer handled correctly. This is a regression, 1.6 and
the 1.7 branch are confirmed to work
Reproducible: Always
Steps to Reproduce:
1. Go to the test case listed in the url field
Actual Results:
Observe that the background on the image in the bottom right is pink
Expected Results:
As the background is transparent, it should be blue
Comment 1•22 years ago
|
||
tor, could this be your drawtile changes?
Updated•22 years ago
|
Keywords: regression
| Reporter | ||
Comment 3•22 years ago
|
||
backing out the patch to bug 244506 fixes this.
Attachment #149855 -
Attachment is obsolete: true
Comment 5•22 years ago
|
||
Would a 3-byte memset be faster/better than 3 assignments? (I somehow doubt it
would, but.....)
Attachment #149869 -
Flags: superreview?(roc)
Attachment #149869 -
Flags: review?(blizzard)
I think three bytes are below the threshold that would be useful to memset.
If we really wanted to speed this up (if it starts showing in any profiles),
you would look at mAlphaBits and construct runs to memset.
Updated•22 years ago
|
Attachment #149869 -
Flags: review?(blizzard) → review+
Attachment #149869 -
Flags: superreview?(roc) → superreview+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•