Bug 245377 - some background images not displaying properly. r=blizzard, sr=roc